Scroll the agenda when using the wheel on the timelabels.

BUG: 292210
(cherry picked from commit 8c0a0f75518b3b2d50a9259981586d99b469fdea)